# ALog

./: README.md  settings.gradle
aloglib/: CMakeLists.txt  build.gradle
aloglib/src/androidTest/java/me/andrew/aloglib/: ALogTest.kt  ExampleInstrumentedTest.kt
aloglib/src/main/: AndroidManifest.xml
aloglib/src/main/cpp/: ALogBridge.cpp  DependencyFactory.h  FileWriter.cpp  FileWriter.h  IBuffer.h  IWriter.h  MMapBuffer.cpp  MMapBuffer.h  MMapFileParser.h  MemoryBuffer.cpp  MemoryBuffer.h
aloglib/src/main/java/me/andrew/aloglib/: ALog.kt
aloglib/src/main/res/values/: strings.xml
aloglib/src/test/java/me/andrew/aloglib/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/me/andrew/alog/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/me/andrew/alog/: MainActivity.kt
app/src/test/java/me/andrew/alog/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
